--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.css">
-  <title>awoo Cupid SDK 範例</title>
+  <title>awoo Nununi SDK 範例</title>
 </head>
 
 <body onDRAGSTART="window.event.returnValue=false">
@@ -44,7 +44,7 @@
     </div>
     <div class="head">
       <img src="../demo/images/awoo.png" class="awoo-headlogo" alt="">
-      <sapn class="logo-font">awoo cupid</sapn>
+      <sapn class="logo-font">awoo nununi</sapn>
       <span class="icon">
         <a href=""><i class="fas fa-shopping-cart"></i></a>
         <a href=""><i class="fas fa-user"></i></a>
@@ -57,8 +57,8 @@
   </header>
 
   <main>
-    <div id="cupid-suggestion-tag"></div>
-    <div id="cupid-product-list"></div>
+    <div id="nununi-suggestion-tag"></div>
+    <div id="nununi-product-list"></div>
   </main>
 
   <div class="page-nav">
@@ -114,22 +114,22 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
-  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
- 
-  cupid.init(() => {
-    const cupidSDK = new CupidSDK('id');
+  window.nununi={init:function(t){var e,n,o;document.getElementById("nununi-js")||((e=document.createElement("script")).type="text/javascript",e.id="nununi-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/nununi-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+
+  nununi.init(() => {
+    const nununiSDK = new NununiSDK('id');
     /*Content API版本設定 default: latest */
-    cupidSDK.setContentAPIVersion('v1.3');
+    nununiSDK.setContentAPIVersion('v1.3');
     /*Products API版本設定 default: latest */
-    cupidSDK.setProductsAPIVersion('v2.3');
+    nununiSDK.setProductsAPIVersion('v2.3');
     /*頁面商品顯示數量設定*/
-    cupidSDK.setLimit(12);
+    nununiSDK.setLimit(12);
     /*頁面渲染範例*/
-    cupidSDK.renderSuggestionTag();
-    cupidSDK.renderProductList();
+    nununiSDK.renderSuggestionTag();
+    nununiSDK.renderProductList();
     /*資料存取範例*/
     (async() => {
-      console.log(await cupidSDK.getContentAll('日本,面膜'));
+      console.log(await nununiSDK.getContentAll('日本,面膜'));
     })();
   });
 </script>
