--- a/demo/indexClassify.html
+++ b/demo/indexClassify.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.css">
-  <title>awoo Cupid SDK 範例</title>
+  <title>awoo Nununi SDK 範例</title>
 </head>
 
 <body onDRAGSTART="window.event.returnValue=false">
@@ -44,7 +44,7 @@
     </div>
     <div class="head">
       <img src="../demo/images/awoo.png" class="awoo-headlogo" alt="">
-      <sapn class="logo-font">awoo cupid</sapn>
+      <sapn class="logo-font">awoo nununi</sapn>
       <span class="icon">
         <a href=""><i class="fas fa-shopping-cart"></i></a>
         <a href=""><i class="fas fa-user"></i></a>
@@ -57,11 +57,11 @@
   </header>
 
   <main>
-    <div id="cupid-suggestion-tag"></div>
-    <div id="cupid-product-list"></div>
+    <div id="nununi-suggestion-tag"></div>
+    <div id="nununi-product-list"></div>
     <div class="section-padding">
       <p>您可能想看其他分類：</p>
-      <div id="cupid-classify"></div>
+      <div id="nununi-classify"></div>
     </div>
   </main>
 
@@ -118,17 +118,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
-  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};  
+  window.nununi={init:function(t){var e,n,o;document.getElementById("nununi-js")||((e=document.createElement("script")).type="text/javascript",e.id="nununi-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/nununi-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
 
-  cupid.init(() => {
-    const cupidSDK = new CupidSDK('id');
+  nununi.init(() => {
+    const nununiSDK = new NununiSDK('id');
     /*Products API版本設定 default: latest */
-    cupidSDK.setProductsAPIVersion('v2.3');
+    nununiSDK.setProductsAPIVersion('v2.3');
     /*頁面商品顯示數量設定*/
-    cupidSDK.setLimit(12);
+    nununiSDK.setLimit(12);
 
     async function getContentProductId(item) {
-      const allContent = await cupidSDK.getContentAll(item);
+      const allContent = await nununiSDK.getContentAll(item);
       const { result } = allContent;
       const productIds = result.products;
       const productIdArray = productIds.map(i => i.productId);
@@ -136,7 +136,7 @@
     };
 
     async function showClassify(item){
-      cupidSDK.renderClassify(await getContentProductId(item));
+      nununiSDK.renderClassify(await getContentProductId(item));
     }
 
     async function findProductId() {
@@ -148,31 +148,31 @@
       return idArray;
     }
 
-    async function setDataCupidId(productId){
+    async function setDataNununiId(productId){
       let dataDom = document.querySelectorAll('span.pro-img');
-      dataDom.forEach((item, index) => item.dataset.cupidProductId = productId[index]);
+      dataDom.forEach((item, index) => item.dataset.nununiProductId = productId[index]);
     };
 
-    /* Classify使用方式一：將商品id代入 cupidSDK.renderClassify。
-    此處以 cupid.getContentAll 產生的 productId 做範例 */
+    /* Classify使用方式一：將商品id代入 nununiSDK.renderClassify。
+    此處以 nununi.getContentAll 產生的 productId 做範例 */
     /* 頁面渲染範例 1 */
-    /* cupidSDK.renderSuggestionTag();
-    cupidSDK.renderProductList();
+    /* nununiSDK.renderSuggestionTag();
+    nununiSDK.renderProductList();
     showClassify('日本,牙膏'); */
 
-    /* Classify使用方式二：若沒有置入參數，程式會搜尋頁面上的 data-cupid-product-id 的值，
-    再代入 cupidSDK.renderClassify 中，此處以 cupid.renderProductList 產生的畫面來擷取 product id做範例 */
+    /* Classify使用方式二：若沒有置入參數，程式會搜尋頁面上的 data-nununi-product-id 的值，
+    再代入 nununiSDK.renderClassify 中，此處以 nununi.renderProductList 產生的畫面來擷取 product id做範例 */
     /* 頁面渲染範例 2 */
     (async() => {
-      cupidSDK.renderSuggestionTag();
-      await cupidSDK.renderProductList();
-      await setDataCupidId(await findProductId());
-      await cupidSDK.renderClassify();
+      nununiSDK.renderSuggestionTag();
+      await nununiSDK.renderProductList();
+      await setDataNununiId(await findProductId());
+      await nununiSDK.renderClassify();
     })();
 
     /*資料存取範例*/
     (async() => {
-      console.log(await cupidSDK.getClassify(['PRODUCT-ID','PRODUCT-ID']));
+      console.log(await nununiSDK.getClassify(['PRODUCT-ID','PRODUCT-ID']));
     })();
   });
 </script>
