--- a/demo/indexProductTag.html
+++ b/demo/indexProductTag.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.css">
-  <title>awoo Cupid SDK 範例</title>
+  <title>awoo Nununi SDK 範例</title>
 </head>
 
 <body onDRAGSTART="window.event.returnValue=false">
@@ -44,7 +44,7 @@
     </div>
     <div class="head">
       <img src="../demo/images/awoo.png" class="awoo-headlogo" alt="">
-      <sapn class="logo-font">awoo cupid</sapn>
+      <sapn class="logo-font">awoo nununi</sapn>
       <span class="icon">
         <a href=""><i class="fas fa-shopping-cart"></i></a>
         <a href=""><i class="fas fa-user"></i></a>
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <div class="spec-info" data-cupid-product-id="PRODUCT-ID">
+    <div class="spec-info" data-nununi-product-id="PRODUCT-ID">
       <ul>
         <li>
           <div class="title">商品名稱</div>
@@ -75,11 +75,11 @@
             <a class="r-arrow">洗面乳｜洗顏皂｜潔顏慕斯</a>
           </div>
         </li>
-          
+
         <li class="tag-browser">
           <div class="title">瀏覽其他類別</div>
           <div class="detail click">
-            <div id="cupid-product-tag">                       
+            <div id="nununi-product-tag">
             </div>
           </div>
         </li>
@@ -160,18 +160,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
-  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};  
+  window.nununi={init:function(t){var e,n,o;document.getElementById("nununi-js")||((e=document.createElement("script")).type="text/javascript",e.id="nununi-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/nununi-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
 
-  cupid.init(() => {
-    const cupidSDK = new CupidSDK('id');
+  nununi.init(() => {
+    const nununiSDK = new NununiSDK('id');
 
      /*Products API版本設定 default: latest */
-     cupidSDK.setProductsAPIVersion('v2.3');
+     nununiSDK.setProductsAPIVersion('v2.3');
     /*頁面渲染範例*/
-    cupidSDK.renderProductTag('PRODUCT-ID');
+    nununiSDK.renderProductTag('PRODUCT-ID');
     /*資料存取範例*/
     (async() => {
-      console.log(await cupidSDK.getProductTags('PRODUCT-ID'));
+      console.log(await nununiSDK.getProductTags('PRODUCT-ID'));
     })();
   });
 </script>
