Miao update demo header and footer, and rebase develop (mv cupid nununi)

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
       nununiSDK.setLimit(12);
       nununiSDK.renderSuggestionTag();
       nununiSDK.renderProductList();
-      // nununiSDK.renderProductTag('PRODUCT_ID');
-      // nununiSDK.renderClassify(['PRODUCT_ID']);
+      nununiSDK.renderProductTag('PRODUCT_ID');
+      nununiSDK.renderClassify(['PRODUCT_ID']);
     </script>
     <!--  Uncomment the following line for seeing API outputs in console.-->
     <!--  <script src="tests/api.js"></script>-->
