fixed home page display

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,12 @@
       // nununiSDK.setContentAPIVersion('v1.3');
       /*Products API版本設定*/
       // nununiSDK.setProductsAPIVersion('v2.3');
+      nununiSDK.setLanguage('ja');
       nununiSDK.setLimit(12);
       nununiSDK.renderSuggestionTag();
       nununiSDK.renderProductList();
       nununiSDK.renderClassifyProductType('熱銷推薦>201909新品上市>');
+
       // nununiSDK.renderProductTag('PRODUCT_ID');
       // nununiSDK.renderClassify(['PRODUCT_ID']);
     </script>
