分類頁面改變title 和 meta

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       // nununiSDK.setContentAPIVersion('v1.3');
       /*Products API版本設定*/
       // nununiSDK.setProductsAPIVersion('v2.3');
-      nununiSDK.setLanguage('ja');
+      nununiSDK.setLanguage('tw');
       nununiSDK.setLimit(12);
       nununiSDK.renderSuggestionTag();
       nununiSDK.renderProductList();
