NC-803 relatedProduct 樣式、react render 不為null

--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,23 @@
   <body>
     <div id="nununi-suggestion-tag"></div>
     <div id="nununi-product-list"></div>
-    <!-- <div id="nununi-product-tag"></div> -->
+    <div id="nununi-product-tag"></div>
     <div id="nununi-product-tag-image"></div>
     <div id="nununi-classify"></div>
-    <div data-nununi-product-id="d87387396"></div>
+    <div data-nununi-product-id="PRODUCT_ID"></div>
     <script src="./app.js"></script>
     <script>
-      const nununiSDK = new NununiSDK(9715703849);
+      const nununiSDK = new NununiSDK(process.env.NUNUNI_ID);
       /*Content API版本設定*/
       // nununiSDK.setContentAPIVersion('v1.3');
       /*Products API版本設定*/
       // nununiSDK.setProductsAPIVersion('v2.3');
       nununiSDK.setLanguage('tw');
       nununiSDK.setLimit(12);
-      // nununiSDK.renderSuggestionTag();
-      // nununiSDK.renderProductList();
-      // nununiSDK.renderClassifyProductType('熱銷推薦>201909新品上市>');
-      nununiSDK.renderProductTag();
+      nununiSDK.renderSuggestionTag();
+      nununiSDK.renderProductList();
+      nununiSDK.renderClassifyProductType('熱銷推薦>201909新品上市>');
+      // nununiSDK.renderProductTag('PRODUCT_ID');
       // nununiSDK.renderClassify(['PRODUCT_ID']);
     </script>
     <!--  Uncomment the following line for seeing API outputs in console.-->
