--- a/demo/indexProductTag.html
+++ b/demo/indexProductTag.html
@@ -79,8 +79,8 @@
         <li class="tag-browser">
           <div class="title">瀏覽其他類別</div>
           <div class="detail click">
-            <div id="nununi-product-tag">
-            </div>
+            <div id="nununi-product-tag"></div>
+            <div id="nununi-product-tag-image"></div>
           </div>
         </li>
         <li>
@@ -159,20 +159,23 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
+<script src="../production/nununi-sdk-latest.min.js"></script>
 <script>
-  window.nununi={init:function(t){var e,n,o;document.getElementById("nununi-js")||((e=document.createElement("script")).type="text/javascript",e.id="nununi-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/nununi-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+  // window.nununi={init:function(t){var e,n,o;document.getElementById("nununi-js")||((e=document.createElement("script")).type="text/javascript",e.id="nununi-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/nununi-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
 
-  nununi.init(() => {
-    const nununiSDK = new NununiSDK('id');
+  // nununi.init(() => {
+    const nununiSDK = new NununiSDK(9715703849);
 
      /*Products API版本設定 default: latest */
      nununiSDK.setProductsAPIVersion('v2.3');
+    nununiSDK.setLanguage('tw');
+    nununiSDK.setLimit(12);
     /*頁面渲染範例*/
-    nununiSDK.renderProductTag('PRODUCT-ID');
+    nununiSDK.renderProductTag('RA00040C');
     /*資料存取範例*/
     (async() => {
-      console.log(await nununiSDK.getProductTags('PRODUCT-ID'));
+      console.log(await nununiSDK.getProductTags('RA00040C'));
     })();
-  });
+  // });
 </script>
 </html>
