--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
       // nununiSDK.setProductsAPIVersion('v2.3');
       nununiSDK.setLanguage('tw');
       nununiSDK.setLimit(12);
-      nununiSDK.renderSuggestionTag();
-      nununiSDK.renderProductList();
-      nununiSDK.renderClassifyProductType('熱銷推薦>201909新品上市>');
-      // nununiSDK.renderProductTag('PRODUCT_ID');
+      // nununiSDK.renderSuggestionTag();
+      // nununiSDK.renderProductList();
+      // nununiSDK.renderClassifyProductType('熱銷推薦>201909新品上市>');
+      nununiSDK.renderProductTag(['PRODUCT_ID']);
       // nununiSDK.renderClassify(['PRODUCT_ID']);
     </script>
     <!--  Uncomment the following line for seeing API outputs in console.-->
