--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       // nununiSDK.renderSuggestionTag();
       // nununiSDK.renderProductList();
       // nununiSDK.renderClassifyProductType('熱銷推薦>201909新品上市>');
-      nununiSDK.renderProductTag(['PRODUCT_ID']);
+      nununiSDK.renderProductTag('PRODUCT_ID');
       // nununiSDK.renderClassify(['PRODUCT_ID']);
     </script>
     <!--  Uncomment the following line for seeing API outputs in console.-->
