--- a/demo/indexProductTag.html
+++ b/demo/indexProductTag.html
@@ -163,17 +163,17 @@
   window.nununi={init:function(t){var e,n,o;document.getElementById("nununi-js")||((e=document.createElement("script")).type="text/javascript",e.id="nununi-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/nununi-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
 
   nununi.init(() => {
-    const nununiSDK = new NununiSDK(id);
+    const nununiSDK = new NununiSDK('id');
 
      /*Products API版本設定 default: latest */
     // nununiSDK.setProductsAPIVersion('v2.3');
     nununiSDK.setLanguage('tw');
     nununiSDK.setLimit(12);
     /*頁面渲染範例*/
-    nununiSDK.renderProductTag('PRODUCT_ID');
+    nununiSDK.renderProductTag('PRODUCT-ID');
     /*資料存取範例*/
     (async() => {
-      console.log(await nununiSDK.getProductTags(['PRODUCT_ID']));
+      console.log(await nununiSDK.getProductTags('PRODUCT-ID'));
     })();
   });
 </script>
