inprogress #5849 Fix:修復排序按鈕事件可能外部js觸發以及page tag url encoding

--- a/demo/index.html
+++ b/demo/index.html
@@ -121,6 +121,7 @@
     js.onload = function(){
       nununi.init();
     };
+    js.charset = "UTF-8";
     js.src = "//api.awoo.org/libs/nununi-sdk-latest.min.js";
     njs.parentNode.insertBefore(js, njs);
   }(document, 'script', 'nununi-js'));
